# CATS

./: .gitignore  README.md  pull_request_template.md  pyproject.toml  run_simple_train.py  train_sample.py
CATS/: callbacks.py  inputs.py
CATS/layers/: activation.py  core.py  sequence.py  utils.py
CATS/models/: basemodel.py  dnn_model.py  linear.py
tests/: test_sequence.py
