[tool.poetry]
name = "cats"
version = "0.1.0"
description = ""
authors = ["22ema <yunsung9503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.13.1"
scikit-learn = "1.3.2"
pandas = "2.0.3"


[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"