[tool.poetry]
name = "cats"
version = "0.1.0"
description = ""
authors = ["22ema <yunsung9503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.13.1"
pandas = "2.0.3"
scikit-learn = "1.1.3"
tensorflow = "2.2.0"


[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"