[tool.poetry]
name = "cats"
version = "0.1.0"
description = ""
authors = ["22ema <yunsung9503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "2.6.0"
torch = "1.13.1"
scikit-learn = "1.1.3"
pandas = "1.1.5"
keras = "2.6.0"
protobuf = "3.20.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
black = "18.6b3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
